# warehouse_project

./: README.md
attach_shelf/: CMakeLists.txt  package.xml
attach_shelf/launch/: attach_shelf_service_server.launch.py  attach_shelf_service_server_real.launch.py  attach_to_shelf.launch.py  pre_approach.launch.xml
attach_shelf/src/: approach_service_server.cpp  approach_service_server_real.cpp  pre_approach.cpp  pre_approach_v2.cpp
cartographer_slam/: CMakeLists.txt  package.xml
cartographer_slam/launch/: cartographer.launch.py  cartographer_real.launch.py  cartographer_sim.launch.py
cartographer_slam/rviz/: cartographer_rviz_config.rviz
localization_server/: CMakeLists.txt  package.xml
localization_server/launch/: localization.launch.py
localization_server/rviz/: localization_config.rviz
map_server/: CMakeLists.txt  package.xml
map_server/config/: map_file.pgm  map_file.yaml  warehouse_map_real.yaml  warehouse_map_real.yaml.pgm  warehouse_map_real_keepout.pgm  warehouse_map_real_keepout.pgm.  warehouse_map_real_keepout.yaml  warehouse_map_sim.pgm  warehouse_map_sim.yaml  warehouse_map_sim_keepout.pgm  warehouse_map_sim_keepout.yaml
map_server/launch/: map_server.launch.py
map_server/rviz/: mapping_rviz_config.rviz
nav2_apps/: README copy.md  README.md  package.xml  robot_footprint  setup.py
nav2_apps/launch/: nav2_apps_real.launch.py  nav2_apps_sim.launch.py
nav2_apps/scripts/: move_shelf_to_ship.py  move_shelf_to_ship_real.py
path_planner_server/: CMakeLists.txt
path_planner_server/config/: controller.yaml  controller_real.yaml  pathplanning.rviz  pathplanning_real.rviz  planner_server.yaml  planner_server_real.yaml  recovery.yaml  recovery_real.yaml
path_planner_server/config/keepout_filter/: controller.yaml  controller_real.yaml  planner_server.yaml  planner_server_real.yaml
path_planner_server/launch/: pathplanner.launch.py
